--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,13 @@
-
+PyQt6==6.5.0
+PyQt6-Charts==6.5.0
+sqlite3
+pandas==2.0.3
+reportlab==4.0.4
+openpyxl==3.1.2
+scikit-learn==1.3.0
+transformers==4.30.2
+torch==2.0.1
+arabic-reshaper==3.0.0
+python-bidi==0.4.2
+matplotlib==3.7.2
+seaborn==0.12.2
